add classes to headings, the margins appeared

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="page theme_dark">
     <header class="header">
-      <h1 class="heading content-section">Карты подскажут</h1>
+      <h1 class="heading content-section header__title">Карты подскажут</h1>
     </header>
     <nav class="header__menu content-section">
       <div class="header__logo">
@@ -39,7 +39,7 @@
       </ul>
     </nav>
     <main class="content content-section">
-      <h2 class="heading">Креативный подход к решению проблем</h2>
+      <h2 class="heading content__title">Креативный подход к решению проблем</h2>
       <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Творческие кризисы, кажется, рано или поздно испытывает любой человек.
@@ -54,7 +54,7 @@
           одном из самых креативных — колоде карт.
         </p>
       </div>
-      <h2 class="heading">Что это за колода</h2>
+      <h2 class="heading content__title">Что это за колода</h2>
       <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Тут могло бы быть что-то про пользу игры в «Дурака» или о высших
@@ -101,7 +101,7 @@
           Решаете только вы.
         </p>
       </div>
-      <h2 class="heading">Как работают «обходные стратегии»</h2>
+      <h2 class="heading content__title">Как работают «обходные стратегии»</h2>
       <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
@@ -146,7 +146,7 @@
         <p class="content__card-subtitle">Воспользуйтесь старой идеей</p>
       </article>
       
-      <h2 class="heading">Кто пользовался Oblique Strategies</h2>
+      <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
           <li>Дэвид Боуи во время записи Берлинской трилогии;</li>
